--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
  body {
     text-align: center;
-    color: rgb(5, 255, 117);
+    color: rgb(21, 255, 0);
     background-image: url('https://images.pexels.com/photos/8141163/pexels-photo-8141163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-repeat: no-repeat;
-    background-size: 100% 100vh;
+    background-size: 120% 100vh;
+    font-family:  'Courier New';
+    font-weight: lighter;
+    font-size: 24px;
+    letter-spacing: 1px;
 }
 button {
    background-color: rgb(75, 11, 117); 
@@ -11,5 +15,6 @@ button {
    width: 7vmin;
    justify-self: center;
    margin: 10px;
+   border: 2px solid white;
 
 }
