--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
- body {
+ /* body {
     text-align: center;
     color: rgb(21, 255, 0);
     background-image: url('https://images.pexels.com/photos/8141163/pexels-photo-8141163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
@@ -17,4 +17,4 @@ button {
    margin: 10px;
    border: 2px solid white;
 
-}
+} */
