--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
  body {
     text-align: center;
     color: rgb(21, 255, 0);
-    /* background-image: url('https://images.pexels.com/photos/8141163/pexels-photo-8141163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
+    background-image: url('https://images.pexels.com/photos/8141163/pexels-photo-8141163.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-repeat: no-repeat;
     background-size: 120% 100vh;
     font-family: 'Courier New';
@@ -21,9 +21,10 @@
  }
 
  p {
-    color: rgb(0, 183, 255);
-    border: 2px solid white;
-    font-weight: heavy;
+    color: argb(30, 255, 0);
+    font-weight: lighter;
+    font-family: 'Courier New';
+    font-size: 30px;
  }
 
  #nextButton {
@@ -37,10 +38,16 @@
     color: black;
  }
 
- .wrong-answer {
+ body-correct {
     background-color: red;
  }
 
  .correct-answer {
     background-color: green;
+ }
+
+ #fullReset {
+    display: flex;
+    justify-content: right;
+    margin: -7.35% 75%;
  }
